telemetry/telemetry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemetry-app
  template:
    metadata:
      name: telemetry-pod
      labels:
        app: telemetry-app
    spec:
      containers:
        - name: telemetry
          image: acrdevproject4480.azurecr.io/telemetry:v3
          ports:
            - containerPort: 8000
