telemetry/telemetry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-service
  namespace: dev
spec:
  selector:
    app: telemetry-app
  ports:
    - port: 9060
      targetPort: 8000
  type: ClusterIP
