telemetry/telemetry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telemetry-ingress
  namespace: dev
  labels:
    app.kubernetes.io/name: telemetry-ingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: /docs
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: telemetry.techno028.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: telemetry-service
                port:
                  number: 9060
